# reasoning-agents

./: .gitignore  add_cot.py  convert_logs.py  convert_user.py  ft_ll32.py  inference.py  pretty_print_trace.py  pyproject.toml  run.py  run_ft.slurm  train.py
